# FP-Compilers-I-and-II

./: README.md  fileEditor.py  pyproject.toml  treeManager.py  ui_form.py
.qtcreator/: pyproject.toml.user.00f7bbb  pyproject.toml.user.f3cbec2
FP-Compilers/: CMakeLists.txt  mainwindow.ui
FP-IDE/: form.ui  pyproject.toml  treeManager.py  ui_form.py  widget.py
Juan-Studio-Code/: codeEditorManager.py  form.ui  pyproject.toml  shortcuts.py  terminalManager.py  treeManager.py  ui_form.py  widget.py
